[package]
name = "aptos-telemetry"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Aptos telemetry utilities"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.52"
futures = "0.3.12"
hyper = { version = "0.14.4", features = ["full"] }
once_cell = "1.7.2"
prometheus = { version = "0.12.0", default-features = false }
regex = "1.5.5"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0.124", features = ["derive"], default-features = false }
serde_json = "1.0.64"
sysinfo = "0.23.5"
tokio = { version = "1.8.1", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

aptos-logger = { path = "../../crates/aptos-logger" }
aptos-metrics = { path = "../../crates/aptos-metrics" }
aptos-workspace-hack = { version = "0.1", path = "../aptos-workspace-hack" }

[dev-dependencies]
rusty-fork = "0.3.0"
assert_approx_eq = "1.1.0"
